RESOLVED FIXED59407
Fix MIPS build due to the split of "Condition" enum
https://bugs.webkit.org/show_bug.cgi?id=59407
Summary Fix MIPS build due to the split of "Condition" enum
Chao-ying Fu
Reported 2011-04-25 17:28:18 PDT
I need to fix MacroAssemblerMIPS.h to remove some incorrect code, due to the split of "Condition" enum. Will submit the patch soon. Thanks a lot! Regards, Chao-ying
Attachments
Fix branch32 and compare32 (5.13 KB, patch)
2011-04-25 17:40 PDT, Chao-ying Fu
no flags
Chao-ying Fu
Comment 1 2011-04-25 17:40:07 PDT
Created attachment 91031 [details] Fix branch32 and compare32 This patch fixes branch32 and compare32 to remove incorrect ResultCondition that appears in the comparison. This patch also fixes JSC::MIPSAssembler::debugOffset to use m_buffer.debugOffset(). JavaScriptCore tests are ok. Thanks!
Eric Seidel (no email)
Comment 2 2011-05-01 12:32:43 PDT
Comment on attachment 91031 [details] Fix branch32 and compare32 OK.
WebKit Commit Bot
Comment 3 2011-05-01 13:26:52 PDT
Comment on attachment 91031 [details] Fix branch32 and compare32 Clearing flags on attachment: 91031 Committed r85429: <http://trac.webkit.org/changeset/85429>
WebKit Commit Bot
Comment 4 2011-05-01 13:26:57 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.