2011-05-01  Chao-ying Fu  <fu@mips.com>

Reviewed by Eric Seidel.

        Fix MIPS build due to the split of "Condition" enum
        https://bugs.webkit.org/show_bug.cgi?id=59407

        * assembler/MIPSAssembler.h:
        (JSC::MIPSAssembler::debugOffset):
        * assembler/MacroAssemblerMIPS.h:
        (JSC::MacroAssemblerMIPS::branch32):
        (JSC::MacroAssemblerMIPS::compare32):

Canonical link: https://commits.webkit.org/75134@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@85429 268f45cc-cd09-0410-ab3c-d52691b4dbfc